--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,1 +1,1 @@
-<input [placeholder]="placeholder" [defaultValue]="defaultValue" [required]="required" (change)="handleChange($event)" />
+<input type="text" [placeholder]="placeholder" [formControlName]="formControlName" />
