implement custom input control

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,1 +1,1 @@
-<input type="text" [placeholder]="placeholder" [formControlName]="formControlName" />
+<input type="text" [placeholder]="placeholder" [disabled]="isDisabled" (blur)="handleBlur()" [(ngModel)]="value" />
