--- a/src/app/pages/courses/courses-page.component.html
+++ b/src/app/pages/courses/courses-page.component.html
@@ -15,14 +15,13 @@
 </div>
 <div class="content content-padding">
     <ul class="courses-list">
-        <li *ngFor="let item of courses; trackBy: trackByCourse" class="course-item">
-            <div *appIfUseful="item.id < 2">
+        <li *ngFor="let item of courses; trackBy: trackByCourse" class="course-item" appWithShadow>
                 <app-course-card
+                    *appIfUseful="item.id < 3"
                     [course]="item"
                     (editEvent)="editCourse(item)"
                     (deleteEvent)="deleteCourse(item)">
                 </app-course-card>
-            </div>
         </li>
     </ul>
 </div>
