--- a/src/app/pages/courses/courses-page.component.html
+++ b/src/app/pages/courses/courses-page.component.html
@@ -26,5 +26,9 @@
         </li>
     </ul>
 </div>
+<div style="margin-top: 50px; color: red;">
+    <a routerLink="./inner">Inner</a>
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
 
